<resources>
    <string name="app_name">NetFlics</string>
    <string name="email_hint">E-mail</string>
    <string name="back">Voltar</string>
    <string name="send">enviar</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="password_hint">Senha</string>
    <string name="password_check_hint">Repetir a Senha</string>
    <string name="loading">Processando. <br /> Por favor aguarde...</string>
    <string name="network_connection_lost">Conexão com a internet indisponível. Verifique sua conexão.</string>

    <!-- Onboarding -->
    <string name="start_button">Vamos lá</string>
    <string name="onboarding_first_page_title">Filmes, séries e muito mais, sem limites</string>
    <string name="onboarding_first_page_subtitle">Assista onde quiser. Cancele quando quiser</string>

    <string name="onboarding_second_page_title">Baixe e assista offline</string>
    <string name="onboarding_second_page_subtitle">Tenha sempre algo para assistir offline.</string>

    <string name="onboarding_third_page_title">Sem compromisso</string>
    <string name="onboarding_third_page_subtitle">Assine hoje, cancele quando quiser.</string>

    <string name="onboarding_privacy">Privacidade</string>
    <string name="onboarding_faq">Perguntas Frequentes</string>

    <!-- Login -->
    <string name="login_success">Login efetuado com sucesso!</string>
    <string name="email_required">E-mail obrigatório!</string>
    <string name="invalid_email">E-mail inválido!</string>
    <string name="password_required">Password obrigatório!</string>
    <string name="password_minimum_length">A senha deve ter 6 caracteres no mínimo.</string>
    <string name="password_invalid_check">A senha e a confirmação de senha devem ser iguais.</string>
    <string name="login_with_google">Entrar com Google</string>
    <string name="login">Entrar</string>
    <string name="login_to_signup">Não tem conta? Cadastre-se aqui!</string>
    <string name="login_to_forgot_password">Esqueceu a senha? Clique aqui!</string>

    <!-- Login (Firebase Errors) -->
    <string name="login_invalid_credentials">Usuário ou senha inválidos.</string>
    <string name="login_user_disabled">Conta de usuário desabilitada.</string>
    <string name="login_user_not_found">Conta não encontrada para o e-mail informado.</string>
    <string name="login_generic_error">Não foi possível efetuar login. Por favor verifique os dados</string>

    <!-- SignUp -->
    <string name="signup">Cadastrar</string>
    <string name="signup_successfully">Cadastro efetuado com sucesso!</string>

    <!-- Forgot Password -->
    <string name="forgot_text">Informe o seu e-mail de cadastro no campo abaixo e então pressione o botão enviar. Um e-mail será enviado para redefinir sua senha. Verifique sua caixa de Spam caso o e-mail não chegue na sua caixa de entrada.</string>
    <string name="reset_password_email_sent">E-mail enviado com sucesso!</string>

    <!-- Profile and Select Profile -->
    <string name="who_is_watching">Quem está assistindo?</string>
    <string name="new_profile">Novo</string>
    <string name="profile">Perfil</string>
    <string name="error_loading_profiles">Não foi possível carregar os perfis da conta.</string>

    <!-- Home -->
    <string name="home">Início</string>
    <string name="coming_soon">Em breve</string>
    <string name="downloads">Downloads</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>